@@ -1,8 +1,6 @@
 package io.hhplus.tdd.point;
 
-import io.hhplus.tdd.database.PointHistoryTable;
-import io.hhplus.tdd.database.UserPointTable;
-import org.json.JSONObject;
+import io.hhplus.tdd.point.service.PointService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -15,7 +13,6 @@ import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.Mockito.doReturn;
@@ -30,22 +27,16 @@ public class PointControllerTest {
     @Mock
     PointService pointService;
 
-    UserPointTable userPointTable;
-    PointHistoryTable pointHistoryTable;
-
     MockMvc mockMvc;
-    JSONObject jsonObject;
-
-    @BeforeEach
-    void setUp() {
-        userPointTable = new UserPointTable();
-        pointHistoryTable = new PointHistoryTable();
-        mockMvc = MockMvcBuilders.standaloneSetup(target).build();
-        jsonObject = new JSONObject();
-    }
 
     Long userId = 1L;
     Long point = 10000L;
+    Long updateMillis = System.currentTimeMillis();
+
+    @BeforeEach
+    void setUp() {
+        mockMvc = MockMvcBuilders.standaloneSetup(target).build();
+    }
 
     /**
      * 포인트 조회 API에 대한 테스트 작성
@@ -54,7 +45,7 @@ public class PointControllerTest {
     void 포인트조회성공() throws Exception {
         //given
         String url = "/point/1";
-        UserPoint userPoint = userPointTable.insertOrUpdate(userId, point);
+        UserPoint userPoint = new UserPoint(userId, point, updateMillis);
 
         doReturn(userPoint).when(pointService).point(userId);
 
@@ -74,8 +65,8 @@ public class PointControllerTest {
     void 포인트충전성공() throws Exception {
         //given
         String url = "/point/1/charge";
-        UserPoint userPoint = userPointTable.insertOrUpdate(userId, point);
         Long amount = 5000L;
+        UserPoint userPoint = new UserPoint(userId, point, updateMillis);
 
         doReturn(userPoint).when(pointService).charge(userId, amount);
 
@@ -97,8 +88,8 @@ public class PointControllerTest {
     void 포인트사용성공() throws Exception {
         //given
         String url = "/point/1/use";
-        UserPoint userPoint = userPointTable.insertOrUpdate(userId, point);
         Long amount = 5000L;
+        UserPoint userPoint = new UserPoint(userId, point, updateMillis);
 
         doReturn(userPoint).when(pointService).use(userId, amount);
 
@@ -120,9 +111,9 @@ public class PointControllerTest {
     void 포인트충전및사용내역조회성공() throws Exception {
         //given
         String url = "/point/1/histories";
-        List<PointHistory> pointHistories = Arrays.asList(
-                pointHistoryTable.insert(userId, point, TransactionType.CHARGE, System.currentTimeMillis()),
-                pointHistoryTable.insert(userId, point, TransactionType.USE, System.currentTimeMillis())
+        List<PointHistory> pointHistories = List.of(
+                new PointHistory(-1L, userId, TransactionType.CHARGE, point, updateMillis),
+                new PointHistory(-2L, userId, TransactionType.USE, point, updateMillis)
         );
 
         doReturn(pointHistories).when(pointService).history(userId);
